--- a/Road to Recovery/pages/viewLog.html
+++ b/Road to Recovery/pages/viewLog.html
@@ -506,10 +506,10 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <select id="hourSelect" class="form-control" aria-required="true" aria-invalid="false" onchange="refreshTable(this.value)">
-                                        <option value="day">יום אחד</option>
-                                        <option value="week">שבוע</option>
-                                        <option value="month">חודש</option>
-                                        <option value="year">שנה</option>
+                                        <option value="day">היום</option>
+                                        <option value="week">שבוע אחורה</option>
+                                        <option value="month">חודש אחורה</option>
+                                        <option value="year">שנה אחורה</option>
                                     </select>
                                 </div>
 
