manageRidePats+ridePatForm+viewLog
viewLog: words change
ridepatForm: changes for amir - apperance only
manageRidePats: fix hour sort bug

--- a/Road to Recovery/pages/viewLog.html
+++ b/Road to Recovery/pages/viewLog.html
@@ -517,12 +517,12 @@
                                     <thead>
                                         <tr>
                                             <!--<th>מספר הסעה</th>-->
-                                            <th>תאריך השינוי</th>
-                                            <th>שעת השינוי</th>
-                                            <th>שם המתנדב המשנה</th>
-                                            <th>סוג האובייקט ששונה</th>
-                                            <th>זיהוי רשומה</th>
-                                            <th>שם העמודה ששונתה</th>
+                                            <th>תאריך</th>
+                                            <th>זמן</th>
+                                            <th>משתמש</th>
+                                            <th>האובייקט ששונה</th>
+                                            <th>ID</th>
+                                            <th>עמודה</th>
                                             <th>הערך הישן</th>
                                             <th>הערך החדש</th>
                                         </tr>
