--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -60,6 +60,10 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <style>
+        .sameWidthBtn{
+            width: 170px;
+        }
+
         .ui-autocomplete {
             max-height: 100px;
             overflow-y: auto;
@@ -645,15 +649,13 @@
                                         var DestIsHospital = hospitals.includes(request.RidePat.Destination.Name);
 
                                         if (DestIsHospital && !returnDriveExist && isDriver) {//offer a return ride
-                                            $('#ModalPayAttention_addition').text('יש לשים לב שביצירת נסיעה חזור ניתן לערוך את הפרטים ולאחר מכן יש לבצע שמירה');
-                                            document.getElementById('modalButtons').innerHTML += '<button onclick="createReturnRide()" class="btn btn-warning waves-effect w-md m-b-5">צור נסיעה חזור &nbsp;<i class="ti-car m-r-5"></i></button>';
+                                            document.getElementById('modalButtons').innerHTML += '<button onclick="createReturnRide()" class="btn btn-success waves-effect w-md m-b-5 sameWidthBtn">יצירת החזרה &nbsp;<i class="ti-car m-r-5"></i></button>';
 
                                             $("#Modal").modal('show');
 
                                         } else { // dont offer return drive
-                                            $('#ModalPayAttention_addition').text('');
-                                            document.getElementById('modalButtons').innerHTML = '<button onclick="createNewRide()" class="btn btn-success waves-effect w-md m-b-5"><i class="ti-plus m-r-5"></i>צור נסיעה חדשה</button>';
-                                            document.getElementById('modalButtons').innerHTML += '<button onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5">חזרה לניהול ההסעות שלי<i class="ti-back-right m-r-5"></i></button>';
+                                            document.getElementById('modalButtons').innerHTML = '<button onclick="createNewRide()" class="btn btn-success waves-effect w-md m-b-5 sameWidthBtn"><i class="ti-plus m-r-5"></i>יצירת הסעה חדשה</button>';
+                                            document.getElementById('modalButtons').innerHTML += '<button onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5 sameWidthBtn">חזרה לניהול ההסעות שלי<i class="ti-back-right m-r-5"></i></button>';
 
                                             $("#Modal").modal('show');
                                             addDriver(rideNumber);
@@ -2268,7 +2270,27 @@
             $('#wait').show();
 
         }
+        function createReturnRide() {
+            if (secondModal) {
+                isThisAReturnDrive = true;
+                localStorage.setItem("ReturnRidePatFlag", true);
+            }
+            returnRide();
+            $("#afterNoon").attr('checked', 'checked');
+            checkAfternoon();
 
+            dateForReturnRepeat = localStorage.getItem("dateForReturnRepeat");
+            localStorage.removeItem("dateForReturnRepeat");
+            $("#dateRide").val(dateForReturnRepeat)
+
+
+            $('#saveCustomer').addClass("saveHighlight");
+
+            CoordinatorForReturn = $("#coordinator").val();
+
+
+            $('#Modal').modal('hide');
+        }
     </script>
 </head>
 <body class="fixed-left">
@@ -2671,52 +2693,16 @@
 
                 </div>
                 <div class="modal-body">
-                    <h3 class="centerHeader">באפשרותך להמשיך באחת מן האפשרויות מטה</h3>
+                    <h3 class="centerHeader">להמשך, בחר.י:</h3>
                     <!-- <h4 class="centerHeader">(אפשר לשנות פרטים בהחזרה, ובסוף יש להקיש על מקש שמירה)</h4>-->
                 </div>
                 <div id="modalButtons" class="modal-footer centerHeader">
-                    <button onclick="createNewRide()" class="btn btn-success waves-effect w-md m-b-5"><i class="ti-plus m-r-5"></i>צור נסיעה חדשה</button>
-                    <button onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5">חזרה לניהול ההסעות שלי<i class="ti-back-right m-r-5"></i></button>
+                    <button onclick="createNewRide()" class="btn btn-success waves-effect w-md m-b-5 sameWidthBtn">יצירת הסעה חדשה</button>
+                    <button onclick="return2manageRidePats()" class="btn btn-default waves-effect w-md m-b-5 sameWidthBtn">חזרה לניהול ההסעות שלי<i class="ti-back-right m-r-5"></i></button>
                 </div>
-                <h4 class="modal-title" id="ModalPayAttention_addition"></h4>
             </div>
         </div>
     </div>
 </body>
 </html>
-<script>
-    function createReturnRide() { 
-        if (secondModal) {
-            isThisAReturnDrive = true;
-            localStorage.setItem("ReturnRidePatFlag", true);
-        }
-        returnRide();
-        $("#afterNoon").attr('checked', 'checked');
-        checkAfternoon();
-
-        dateForReturnRepeat = localStorage.getItem("dateForReturnRepeat");
-        //alert(dateForReturnRepeat);
-        localStorage.removeItem("dateForReturnRepeat");
-        $("#dateRide").val(dateForReturnRepeat)
-
-
-        $('#saveCustomer').addClass("saveHighlight");
-
-        CoordinatorForReturn = $("#coordinator").val();
-
-
-        $('#Modal').modal('hide');
-    }
-
-//function chooseNo() {
-
-//    if (!secondModal) {
-//        //    localStorage.setItem("ReturnRidePatFlag", false);
-//        //alert("changed to false")
-//        addDriver(rideNumberForNo);
-//    }
-
-//    $('#Modal').modal('toggle');
-//}
-</script>
 
