--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -1,4 +1,5 @@
 ﻿
+
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
@@ -135,82 +136,9 @@
             $("#rp_amuta_vls_km").click(on_report_click);
             $("#rp_amuta_vls_list").click(on_report_click);
             $("#rp_amuta_vls_per_month").click(on_report_click);
+            $("#rp_pil_vls_per_month").click(on_report_click);
+            $("#rp_pil_vl_ride_month").click(on_report_click);
     
-           
-
-            if (localStorage.south == "undefined" || localStorage.south === undefined) {
-                localStorage.south = true;
-                $('#south').prop('checked', true);
-            } else {
-                $('#south').prop('checked', JSON.parse(localStorage.south));
-            }
-
-
-            if (localStorage.center == "undefined" || localStorage.center === undefined) {
-                localStorage.center = true;
-                $('#center').prop('checked', true);
-            } else {
-                $('#center').prop('checked', JSON.parse(localStorage.center));
-            }
-
-            if (localStorage.north == "undefined" || localStorage.north === undefined) {
-                localStorage.north = true;
-                $('#north').prop('checked', true);
-            } else {
-                $('#north').prop('checked', JSON.parse(localStorage.north));
-            }
-
-            if (localStorage.sunday == "undefined" || localStorage.sunday === undefined) {
-                localStorage.sunday = true;
-                $('#sunday').prop('checked', true);
-            } else {
-                $('#sunday').prop('checked', JSON.parse(localStorage.sunday));
-            }
-
-            if (localStorage.monday == "undefined" || localStorage.monday === undefined) {
-                localStorage.monday = true;
-                $('#monday').prop('checked', true);
-            } else {
-                $('#monday').prop('checked', JSON.parse(localStorage.sunday));
-            }
-
-            if (localStorage.tuesday == "undefined" || localStorage.tuesday === undefined) {
-                localStorage.tuesday = true;
-                $('#tuesday').prop('checked', true);
-            } else {
-                $('#tuesday').prop('checked', JSON.parse(localStorage.tuesday));
-            }
-
-            if (localStorage.wednesday == "undefined" || localStorage.wednesday === undefined) {
-                localStorage.wednesday = true;
-                $('#wednesday').prop('checked', true);
-            } else {
-                $('#wednesday').prop('checked', JSON.parse(localStorage.wednesday));
-            }
-
-            if (localStorage.thursday == "undefined" || localStorage.thursday === undefined) {
-                localStorage.thursday = true;
-                $('#thursday').prop('checked', true);
-            } else {
-                $('#thursday').prop('checked', JSON.parse(localStorage.thursday));
-            }
-
-            if (localStorage.friday == "undefined" || localStorage.friday === undefined) {
-                localStorage.friday = true;
-                $('#friday').prop('checked', true);
-            } else {
-                $('#friday').prop('checked', JSON.parse(localStorage.friday));
-            }
-
-            if (localStorage.saturday == "undefined" || localStorage.saturday === undefined) {
-                localStorage.saturday = true;
-                $('#saturday').prop('checked', true);
-            } else {
-                $('#saturday').prop('checked', JSON.parse(localStorage.saturday));
-            }
-
-
-
 
         });
 
@@ -244,46 +172,6 @@
                     day = "Invalid day";
             }
             return day;
-        }
-
-        function saveFilters() {
-
-            localStorage.south = $("#south").prop('checked');
-            var south = JSON.parse(localStorage.south);
-            localStorage.center = $("#center").prop('checked');
-            var center = JSON.parse(localStorage.center);
-            localStorage.north = $("#north").prop('checked');
-            var north = JSON.parse(localStorage.north);
-            weekdays = [];
-            localStorage.sunday = $("#sunday").prop('checked');
-            var sunday = JSON.parse(localStorage.sunday);
-            if (sunday)
-                weekdays.push("א");
-            localStorage.monday = $("#monday").prop('checked');
-            var monday = JSON.parse(localStorage.monday);
-            if (monday)
-                weekdays.push("ב");
-            localStorage.tuesday = $("#tuesday").prop('checked');
-            var tuesday = JSON.parse(localStorage.tuesday);
-            if (tuesday)
-                weekdays.push("ג");
-            localStorage.wednesday = $("#wednesday").prop('checked');
-            var wednesday = JSON.parse(localStorage.wednesday);
-            if (wednesday)
-                weekdays.push("ד");
-            localStorage.thursday = $("#thursday").prop('checked');
-            var thursday = JSON.parse(localStorage.thursday);
-            if (thursday)
-                weekdays.push("ה");
-            localStorage.friday = $("#friday").prop('checked');
-            var friday = JSON.parse(localStorage.friday);
-            if (friday)
-                weekdays.push("ו");
-            localStorage.saturday = $("#saturday").prop('checked');
-            var saturday = JSON.parse(localStorage.saturday);
-            if (saturday)
-                weekdays.push("ש");
-
         }
 
 
@@ -335,7 +223,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-2">
-                            <h1> עץ הדוחות</h1>
+                            <h1> עץ הדו"חות</h1>
                             <ul id="myUL" class="report_tree_UL">
                                 <!--  <li>
         <span>לרכז</span>
@@ -350,7 +238,7 @@
                                         <li><a class="report_link_cls" id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
-                                        <li><a class="report_link_cls" id="rp_amuta_vls_per_month"> מספר מתנדבים חודשי</a></li>
+                                        <li><a class="report_link_cls" id="rp_amuta_vls_per_month"> מספר המתנדבים המסיעים פר חודש</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -358,6 +246,13 @@
                                     <ul class="report_tree_UL">
                                         <li><a class="report_link_cls" id="rp_vl_ride_month">הסעות החודש </a></li>
                                         <li><a class="report_link_cls" id="rp_vl_ride_year">הסעות השנה </a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <span style="font-weight: bold;">פילוחים</span>
+                                    <ul class="report_tree_UL">
+                                        <li><a class="report_link_cls" id="rp_pil_vls_per_month">הסעות מתנדבים בפילוח חודשי </a></li>
+                                        <li><a class="report_link_cls" id="rp_pil_vl_ride_month">מתנדבים מסיעים בחתך חודשי </a></li>
                                     </ul>
                                 </li>
                                 <li id="rp_special_list" style="display:none">
@@ -411,6 +306,7 @@
                                             <th title="Address" class="timeCustomWidth">כתובת</th>
                                             <th title="CityCityName" class="timeCustomWidth">ישוב מגורים</th>
                                             <th title="JoinDate" class="timeCustomWidth">תאריך הצטרפות</th>
+                                            <th title="CellPhone" class="timeCustomWidth">טלפון</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
@@ -455,10 +351,51 @@
                                     <tbody></tbody>
                                 </table>
                             </div>
+                            <div id="div_table_pil_vl_ride_month" style="display:none" class="card-box table-responsive">
+                                <table id="table_pil_vl_ride_month" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                            <th title="Count" class="dateCustomWidth">כמות</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
                             <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
                                 <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
                             </div>
                             <br />
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row" name="Container_for_wide_tables">
+                    <div class="col-sm-12">
+                        <div id="div_table_pil_vls_per_month" style="display:none" class="card-box table-responsive">
+                            <table id="table_pil_vls_per_month" class="table table-striped table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th title="DisplayName" class="timeCustomWidth"> שם המתנדב</th>
+                                        <th title="City" class="timeCustomWidth"> ישוב מגורים</th>
+                                        <th title="CellPhone" class="timeCustomWidth">טלפון</th>
+                                        <th title="JoinDate" class="timeCustomWidth"> תאריך הצטרפות</th>
+                                        <th title="Jan" class="timeCustomWidth">ינואר</th>
+                                        <th title="Feb" class="timeCustomWidth">פברואר</th>
+                                        <th title="Mar" class="timeCustomWidth">מרץ</th>
+                                        <th title="Apr" class="timeCustomWidth">אפריל</th>
+                                        <th title="May" class="timeCustomWidth">מאי</th>
+                                        <th title="Jun" class="timeCustomWidth">יוני</th>
+                                        <th title="Jul" class="timeCustomWidth">יולי</th>
+                                        <th title="Aug" class="timeCustomWidth">אוגוסט</th>
+                                        <th title="Sep" class="timeCustomWidth">ספטמבר</th>
+                                        <th title="Oct" class="timeCustomWidth">אוקטובר</th>
+                                        <th title="Nov" class="timeCustomWidth">נובמבר</th>
+                                        <th title="Dec" class="timeCustomWidth">דצמבר</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
                         </div>
 
                     </div>
@@ -536,18 +473,26 @@
                                 <div class="row">
                                     <div class="col-sm-1"><input type="radio" template_name="radio" template_id="radio_all" style="margin-top: 10px" /></div>
                                     <div class="col-sm-10">
-                                        <label style="padding: 0.5em 0px;"> כל המתנדבים </label>
+                                        <label style="padding: 0.5em 0px;">    כל המתנדבים (למעט אלו שסומנו לא להציג שוב) </label>
                                     </div>
                                 </div>
+                                <div class="row" style="padding: 0.3em 0px;"></div>
+                                <div class="row">
+                                    <div class="col-sm-1"><input type="checkbox" template_id="ck_only_with_rides" value="" /> </div>
+                                    <div class="col-sm-11">
+                                        <label> הצג רק מתנדבים שהסיעו </label>
+                                    </div>
+                                </div>
+                                <div class="row" style="padding: 1.0em 0px;"></div>
                                 <div class="row">
                                     <div class="col-sm-6"><input type="button" template_id="commit_to_ni_db" value="אל תדווח שוב על מתנדבים אלו" /> </div>
                                     <div class="col-sm-6">
-                                        <label style="padding: 0.5em 0px;"> (עדכון מסד הנתונים) </label>
+                                        <label> הקשה פה תמחק את המתנדבים מכל דו"ח עתידי </label>
                                     </div>
                                 </div>
 
                             </div>
-                        </div>
+                            </div>
                         <div class="row report_template" name="template_PATIENT">
                             <div class="card-box">
                                 <div class="row">
@@ -574,7 +519,8 @@
                                             <label class="col-sm-2" style="padding: 0.5em 0px;">שנה</label>
                                             <div class="col-sm-10">
                                                 <select template_id="select_year" class="form-control">
-                                                    <option value="2020" selected>2020</option>
+                                                    <option value="2021" selected>2021</option>
+                                                    <option value="2020">2020</option>
                                                     <option value="2019">2019</option>
                                                 </select>
                                             </div>
@@ -588,6 +534,27 @@
                         </div>
                         <div class="row report_template" name="template_PER_MONTH">
                         </div>
+                        <div class="row report_template" name="template_YTD">
+                            <div class="card-box">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;">שנה</label>
+                                            <div class="col-sm-10">
+                                                <select template_id="select_year_ytd" class="form-control">
+                                                    <option value="last_12_months" selected>שנה אחורה מהיום</option>
+                                                    <option value="2021">2021 - YTD</option>
+                                                    <option value="2020">2020</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
                         <div class="row report_template report_hidden" name="HIDDEN_MONTH">
                             <input type="text" template_id="select_month" class="form-control" aria-required="true" aria-invalid="false">
                         </div>
@@ -596,7 +563,7 @@
             </div>
         </div>
         <footer class="footer text-right" style="right:0px">
-            2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+            2021 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
         </footer>
     </div>
 
