--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
-    <title>Report Test</title>
+    <title>דו"חות</title>
 
     <!--
     כמה הסעות עשה מתנדב נתון בתקופת זמן נתונה.
