temporary fix - edit patient bug
meanwhile until we fix the db with normal pk
- first and last name can not be edited
 also +
when an asistent was loged in it use to take different full name instead of the values from the inputs - NOT ANY MORE THE CASE

--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -897,7 +897,7 @@
                                                 <div class="form-group">
                                                     <label data-toggle="tooltip" title="اسم شخصي First Name" class="col-sm-2 control-label">שם פרטי&nbsp;</label>
                                                     <div class="col-sm-6">
-                                                        <input id="patientFirstName" name="patientFirstName" type="text" class="form-control">
+                                                        <input id="patientFirstName" name="patientFirstName" type="text" class="form-control" disabled>
                                                     </div>
                                                 </div>
                                             </div>
@@ -905,7 +905,7 @@
                                                 <div class="form-group">
                                                     <label data-toggle="tooltip" title="اسم العائلة  Last Name" class="col-sm-2 control-label">שם משפחה&nbsp;</label>
                                                     <div class="col-sm-6">
-                                                        <input id="patientLastName" name="patientLastName" type="text" class="form-control">
+                                                        <input id="patientLastName" name="patientLastName" type="text" class="form-control" disabled>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1241,7 +1241,6 @@
 
                 submitHandler: function (form, event) {
                     event.preventDefault();
-                    debugger;
 
                     var valid = validatePatientInputs();
                     if (!valid) return false;
@@ -1249,10 +1248,10 @@
                     var name = $("#patientFirstName").val().trim().replace(/\s\s+/g, ' ');
                     var lastName = $("#patientLastName").val().trim().replace(/\s\s+/g, ' ');
                     var englishName = $("#patientEnglishName").val().trim().replace(/\s\s+/g, ' ');
-                    if (isAssistant) {
-                        name = englishName;
-                        lastName = " ";
-                    }
+                    //if (isAssistant) {
+                    //    name = englishName;
+                    //    lastName = " ";
+                    //}
                     var phone = $("#phone1").val().trim().replace(/\s\s+/g, ' ');
                     if (phone != "") {
                         phone = phone.replace(/-/g, '');
