--- a/Road to Recovery/pages/viewCandidates.html
+++ b/Road to Recovery/pages/viewCandidates.html
@@ -319,5 +319,7 @@
         </div>
     </div>
     <!-- ↑ RidesHistoryModal ↑  -->
+    <footer id="rights" data-toggle="tooltip" data-placement="top" title="© All rights reserved The Road to Recovery.  جميع الحقوق محفوظة لجمعية الطريق الى الشفاء" class="footer text-right">
+    </footer>
 </body>
 </html>
