--- a/Road to Recovery/pages/VolunteerDetails.html
+++ b/Road to Recovery/pages/VolunteerDetails.html
@@ -661,9 +661,9 @@
     </div>
     <!-- end container -->
     <!-- FOOTER -->
-    <footer class="footer text-right">
-        2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+    <footer id="rights" data-toggle="tooltip" data-placement="top" title="© All rights reserved The Road to Recovery.  جميع الحقوق محفوظة لجمعية الطريق الى الشفاء" class="footer text-right">
     </footer>
+
     <!-- End FOOTER -->
     <script>
         var resizefunc = [];
@@ -672,6 +672,11 @@
     <script>
 
         $(document).ready(function () {
+
+
+            let { COPYWRITE } = GENERAL;
+            $('#rights').html(COPYWRITE());
+
 
             generateBirthdaySelect()
             generateJoinDateSelect()
