--- a/Road to Recovery/pages/viewLocation.html
+++ b/Road to Recovery/pages/viewLocation.html
@@ -54,6 +54,10 @@
         var allLocationsFromDB=[];
         $(document).ready(function () {
 
+            let { COPYWRITE } = GENERAL;
+            $('#rights').html(COPYWRITE());
+
+
             includeHTML();
             if (window.location.hostname.toString() == 'localhost' || window.location.pathname.toLowerCase().indexOf('test') != -1) {
                 $("#na").css("background-color", "#ffde89");
@@ -383,9 +387,9 @@
             </div>
             <!-- end content -->
             <!-- FOOTER -->
-            <footer class="footer text-right">
-                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+            <footer id="rights" data-toggle="tooltip" data-placement="top" title="© All rights reserved The Road to Recovery.  جميع الحقوق محفوظة لجمعية الطريق الى الشفاء" class="footer text-right">
             </footer>
+
             <!-- End FOOTER -->
 
         </div>
