--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -40,6 +40,8 @@
         var allPatientsFromDB = [];
         var isAssistant = JSON.parse(GENERAL.USER.getIsAssistant());
         $(document).ready(function () {
+            let { COPYWRITE } = GENERAL;
+            $('#rights').html(COPYWRITE());
 
             if (localStorage.activePat == "undefined" || localStorage.activePat === undefined)
                 localStorage.activePat = true;
@@ -519,9 +521,9 @@
             </div>
             <!-- end content -->
             <!-- FOOTER -->
-            <footer class="footer text-right">
-                2020 - 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
+            <footer id="rights" data-toggle="tooltip" data-placement="top" title="© All rights reserved The Road to Recovery.  جميع الحقوق محفوظة لجمعية الطريق الى الشفاء" class="footer text-right">
             </footer>
+
             <!-- End FOOTER -->
         </div>
         <!-- ============================================================== -->
