disable english name * temp fix* for edit patient bug
disable english name * temp fix* for edit patient bug

--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -915,7 +915,7 @@
                                                 <div class="form-group">
                                                     <label data-toggle="tooltip" title="Patient name in english" class="col-sm-2 control-label">שם באנגלית&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6">
-                                                        <input id="patientEnglishName" name="patientEnglishName" type="text" class="form-control">
+                                                        <input id="patientEnglishName" name="patientEnglishName" type="text" class="form-control"  disabled>
                                                     </div>
                                                 </div>
                                             </div>
