patientform - enable fields when create new patient
the fields are
firstname. lastname. englishname

--- a/Road to Recovery/pages/patientForm.html
+++ b/Road to Recovery/pages/patientForm.html
@@ -352,6 +352,10 @@
             if (JSON.parse(GENERAL.PATIENTS.getPatientsList()).length != 0) {
                 arr_patient = JSON.parse(GENERAL.PATIENTS.getPatientsList());
                 if (arr_customer.func == "new") {
+                    $('#patientFirstName').prop('disabled', false);
+                    $('#patientLastName').prop('disabled', false);
+                    $('#patientEnglishName').prop('disabled', false);
+
                     document.getElementById("newEscort").disabled = true;
                     //generateBarrier();
                     //generateHospital();
