--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
     <meta charset="utf-8">
@@ -43,17 +41,18 @@
 
     <script src="lib/reports.js"></script>
 
-       <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="../plugins/jquery-validation/dist/jquery.validate.min.js"></script>
 
-       <script src="dataTables.js"></script>
-        <script src="moment.js"></script>
-        <script src="datetime-moment.js">
+    <script src="dataTables.js"></script>
+    <script src="moment.js"></script>
+    <script src="datetime-moment.js">
 
 
 
     <!-- Select2 css+js -->
-        <link href="assets/css/select2.css" rel="stylesheet" />
-        <script src="assets/js/select2.min.js"></script>
+                <link href="assets/css/select2.css" rel="stylesheet" />
+                <script src="assets/js/select2.min.js"></script>
     <!--<script src="lib/sorting.js"></script>-->
     <script src="lib/includeHTML.js"></script>
     <!--<script src="https://cdn.datatables.net/plug-ins/1.10.19/sorting/date-de.js"></script>-->
@@ -88,15 +87,27 @@
         input[type=text], input[type=checkbox], input[type=date], #statusRidePat, #Origin, #Destination, #hour, #minute {
             border-color: #000
         }
+
+        form .error {
+            color: #ff0000;
+        }
+
+        html input[disabled], button[disabled] {
+            color: lightgray;
+        }
+
         .report_template {
             display: none;
         }
+
         .report_hidden {
             display: none;
         }
+
         .report_link_cls {
             cursor: pointer;
         }
+
         .report_tree_UL {
             padding-right: 1.5em;
         }
@@ -110,77 +121,79 @@
 
 
     <script>
-        checkCookie();
+                checkCookie();
 
-        var arr_rides;
-        var curr = new Date; // get current date
-        var first = curr.getDate() - curr.getDay(); // First day is the day of the month - the day of the week
-        var last = first + 6; // last day is the first day + 6
+                var arr_rides;
+                var curr = new Date; // get current date
+                var first = curr.getDate() - curr.getDay(); // First day is the day of the month - the day of the week
+                var last = first + 6; // last day is the first day + 6
 
-        var firstday = new Date(curr.setDate(first));
-        var lastday = new Date(curr.setDate(last));
+                var firstday = new Date(curr.setDate(first));
+                var lastday = new Date(curr.setDate(last));
 
-        if (lastday.getDate() < firstday.getDate()) {
-            { var thisWeekFirst = lastday.getDate() + "." + (lastday.getMonth() + 2) + " - " + firstday.getDate() + "." + (firstday.getMonth() + 1) }
-        } else { var thisWeekFirst = lastday.getDate() + "." + (lastday.getMonth() + 1) + " - " + firstday.getDate() + "." + (firstday.getMonth() + 1) }
-        var locations;
-        var southLocations = []
-        var centerLocations = []
-        var northLocations = []
-        var allRides = [];
-        var weekdays = [];
+                if (lastday.getDate() < firstday.getDate()) {
+                    { var thisWeekFirst = lastday.getDate() + "." + (lastday.getMonth() + 2) + " - " + firstday.getDate() + "." + (firstday.getMonth() + 1) }
+                } else { var thisWeekFirst = lastday.getDate() + "." + (lastday.getMonth() + 1) + " - " + firstday.getDate() + "." + (firstday.getMonth() + 1) }
+                var locations;
+                var southLocations = []
+                var centerLocations = []
+                var northLocations = []
+                var allRides = [];
+                var weekdays = [];
 
-        $(document).ready(function () {
+                $(document).ready(function () {
 
-            let {COPYWRITE} = GENERAL;
-            $('#rights').html(COPYWRITE());
+                    let {COPYWRITE} = GENERAL;
+                    $('#rights').html(COPYWRITE());
 
-            init_reports_page();
+                    init_reports_page();
 
-            $("#rp_vl_ride_month").click(on_report_click);
-            $("#rp_vl_ride_year").click(on_report_click);
-            $("#rp_amuta_vls_week").click(on_report_click);
-            $("#rp_amuta_vls_per_pat").click(on_report_click);
-            $("#rp_amuta_vls_km").click(on_report_click);
-            $("#rp_amuta_vls_list").click(on_report_click);
-            $("#rp_amuta_vls_per_month").click(on_report_click);
-            $("#rp_pil_vls_per_month").click(on_report_click);
-            $("#rp_pil_vl_ride_month").click(on_report_click);
-    
-
-        });
+                    $("#rp_vl_ride_month").click(on_report_click);
+                    $("#rp_vl_ride_year").click(on_report_click);
+                    $("#rp_amuta_vls_week").click(on_report_click);
+                    $("#rp_amuta_vls_per_pat").click(on_report_click);
+                    $("#rp_amuta_vls_km").click(on_report_click);
+                    $("#rp_amuta_vls_list").click(on_report_click);
+                    $("#rp_amuta_vls_per_month").click(on_report_click);
+                    $("#rp_pil_vls_per_month").click(on_report_click);
+                    $("#rp_pil_vl_ride_month").click(on_report_click);
+                    $("#rp_pil_vl_ride_recent_period").click(on_report_click);
 
 
 
-        function getDayString(num) {
-            var day;    //Create a local variable to hold the string
-            switch (num) {
-                case 0:
-                    day = "יום א'";
-                    break;
-                case 1:
-                    day = "יום ב'";
-                    break;
-                case 2:
-                    day = "יום ג'";
-                    break;
-                case 3:
-                    day = "יום ד'";
-                    break;
-                case 4:
-                    day = "יום ה'";
-                    break;
-                case 5:
-                    day = "יום ו'";
-                    break;
-                case 6:
-                    day = "יום ש'";
-                    break;
-                default:
-                    day = "Invalid day";
-            }
-            return day;
-        }
+                });
+
+
+
+                function getDayString(num) {
+                    var day;    //Create a local variable to hold the string
+                    switch (num) {
+                        case 0:
+                            day = "יום א'";
+                            break;
+                        case 1:
+                            day = "יום ב'";
+                            break;
+                        case 2:
+                            day = "יום ג'";
+                            break;
+                        case 3:
+                            day = "יום ד'";
+                            break;
+                        case 4:
+                            day = "יום ה'";
+                            break;
+                        case 5:
+                            day = "יום ו'";
+                            break;
+                        case 6:
+                            day = "יום ש'";
+                            break;
+                        default:
+                            day = "Invalid day";
+                    }
+                    return day;
+                }
 
 
     </script>
@@ -261,6 +274,7 @@
                                     <ul class="report_tree_UL">
                                         <li><a class="report_link_cls" id="rp_pil_vls_per_month">הסעות מתנדבים בפילוח חודשי </a></li>
                                         <li><a class="report_link_cls" id="rp_pil_vl_ride_month">מתנדבים מסיעים בחתך חודשי </a></li>
+                                        <li><a class="report_link_cls" id="rp_pil_vl_ride_recent_period">הסעות בתקופה האחרונה </a></li>
                                     </ul>
                                 </li>
                                 <li id="rp_special_list" style="display:none">
@@ -274,7 +288,7 @@
                         </div>
                         <div class="col-sm-3">
                             <h1> פרמטרים</h1>
-                            <div id="params_ph"> </div>
+                            <form id="params_ph"> </form>
                         </div>
                         <div class="col-sm-7">
                             <h1 id="report_title"> </h1>
@@ -365,6 +379,19 @@
                                         <tr>
                                             <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
                                             <th title="Count" class="dateCustomWidth">כמות</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                            <div id="div_table_pil_vl_ride_recent_period" style="display:none" class="card-box table-responsive">
+                                <table id="table_pil_pil_vl_ride_recent_period" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                            <th title="CityCityName" class="timeCustomWidth">ישוב מגורים</th>
+                                            <th title="JoinDate" class="timeCustomWidth">תאריך הצטרפות</th>
+                                            <th title="CellPhone" class="timeCustomWidth">טלפון</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
@@ -500,7 +527,7 @@
                                 </div>
 
                             </div>
-                            </div>
+                        </div>
                         <div class="row report_template" name="template_PATIENT">
                             <div class="card-box">
                                 <div class="row">
@@ -563,6 +590,41 @@
                                 </div>
                             </div>
                         </div>
+                            <div class="row report_template" name="template_RECENT_PERIOD">
+                                <div class="card-box">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <div class="form-group">
+                                                <label class="col-sm-2" style="padding: 0.5em 0px;">הסיע.ה ב</label>
+                                                <div class="col-sm-5">
+                                                    <input type="text" template_id="input_period_begin" name="input_period_begin" class="form-control" aria-required="true" aria-invalid="false" has-error required />
+                                                </div>
+                                                <label class="col-sm-5" style="padding: 0.5em 0px;">ימים האחרונים</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <div class="form-group">
+                                                <label class="col-sm-3" style="padding: 0.5em 0px;">אך לא הסיע.ה ב</label>
+                                                <div class="col-sm-5">
+                                                    <input type="text" template_id="input_period_end" name="input_period_end" class="form-control" aria-required="true" aria-invalid="false" />
+                                                </div>
+                                                <label class="col-sm-4" style="padding: 0.5em 0px;">ימים האחרונים</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <div class="form-group">
+                                                <div class="row">
+                                                    <div class="col-sm-2"><input type="button" template_id="generate_report_period" value="בצע דיווח" disabled /> </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        </div>
+                                    </div>
+                            </div>
                         <div class="row report_template report_hidden" name="HIDDEN_MONTH">
                             <input type="text" template_id="select_month" class="form-control" aria-required="true" aria-invalid="false">
                         </div>
